<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/crud_register"
    android:padding="20dp"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="60dp"
        android:text="@string/reg_txt_create_account"
        android:textAlignment="center"
        android:textColor="@color/primary_dark"
        android:textSize="26sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etxt_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_first_name_hint"
            android:inputType="textShortMessage"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/secondary_dark" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etxt_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_last_name_hint"
            android:inputType="textShortMessage"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/secondary_dark" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etxt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_email_hint"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/secondary_dark" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etxt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_username_hint"
            android:inputType="textShortMessage"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/secondary_dark" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="444dp"
        android:layout_marginEnd="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etxt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_password_hint"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/secondary_dark" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/secondary_dark"
        android:text="@string/reg_create_account"
        android:textStyle="bold" />
</RelativeLayout>